--- a/src/components/spotify/body/maintracks/maintracks.css
+++ b/src/components/spotify/body/maintracks/maintracks.css
@@ -12,7 +12,7 @@
     width: 100%;
     border-radius: 10px;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
