BetterSpotify - Netlify Version

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -6,7 +6,6 @@
     align-items: center;
     flex-direction: column;
     background: linear-gradient(135deg, rgb(255, 124, 141)0%, rgb(195,83,216) 50%, rgba(117,155,211,1) 90%);
-    gap: 5rem;
     padding-top: 30px;
     padding-bottom: 30px;
 }
@@ -17,10 +16,10 @@
 }
 
 .login > p {
+    max-width: 750px;
     text-align: center;
     font-style: italic;
     opacity: 0.5;
-    margin: 20px;
 }
 
 .login button {
@@ -33,6 +32,7 @@
     color: #fff;
     font-size: 14px;
     letter-spacing: 1px;
+    margin: 4vh;
 }
 
 .login-progress {
@@ -47,7 +47,7 @@
     border-left: 1px solid rgba(255, 255, 255, 0.3);
     padding: 10px;
     border-radius: 3vh;
-    margin: 10px;
+    margin: 4vh;
 }
 
 @media screen and (max-width: 1100px) {
