--- a/src/components/spotify/body/mainartist/mainartists.css
+++ b/src/components/spotify/body/mainartist/mainartists.css
@@ -1,25 +1,39 @@
 .mainartists {
-    height: 80px;
-    width: 200px;
+    height: 50%;
+    width: 50%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
 .mainartists-img {
-    height: 80px;
-    width: 80px;
+    height: 100%;
+    width: 40%;
+    display: flex;
+    align-items: center;
 }
 
-.mainartists-img img {
-    height: 80px;
+.mainartists-img-box {
+    width: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
     border-radius: 50%;
 }
 
+.mainartists-img-box:after{
+    content: '';
+    display: block;
+    padding-bottom: 100%;
+}
+
 .mainartists-name {
+    width: 60%;
+    padding-right: 5%;
     font-size: 12px;
     font-weight: 600;
     color: rgb(165,176,195);
     line-height: 12px;
     margin-left: 10px;
+    word-wrap: break-word;
 }
