--- a/src/components/spotify/body/mainplayed/mainplayed.css
+++ b/src/components/spotify/body/mainplayed/mainplayed.css
@@ -1,22 +1,67 @@
 .mainplayed {
-    height: 68px;
+    height: 14.5%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 5px;
     background-color: rgb(33,43,59);
     box-sizing: border-box;
-    border-radius: 10px;
+    border-radius: 12px;
+}
+
+@media screen and (max-width: 1100px) {
+    .mainplayed {
+        height: 52px;
+        margin: 1%;
+        width: 31.3%;
+        float: left;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .mainplayed {
+        margin: 1%;
+        width: 14.66%;
+    }
 }
 
 .mainplayed-img {
-    height: 58px;
-    width: 58px;
+    width: 14%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 1%;
+    border-radius: 10px;
 }
 
-.mainplayed-img img {
-    height: 100%;
-    border-radius: 8px;
+@media screen and (max-width: 1300px) {
+    .mainplayed-img {
+        width: 35%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .mainplayed-img {
+        width: 32px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .mainplayed-img {
+        width: 100;
+    }
+}
+
+.mainplayed-img:after{
+    content: '';
+    display: block;
+    padding-bottom: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+    .mainplayed-img:after{
+        padding-bottom: 32px;
+    }
 }
 
 .mainplayed-name {
@@ -27,8 +72,20 @@
     margin-left: 10px;
 }
 
+@media screen and (max-width: 750px) {
+    .mainplayed-name {
+        display: none;
+    }
+}
+
 .mainplayed-name p {
     font-size: 12px;
     font-weight: 400;
     color: rgb(77, 123, 175);
+}
+
+@media screen and (max-width: 1100px) {
+    .mainplayed-name p {
+        font-size: 10px;
+    }
 }
