--- a/src/components/spotify/body/maintracks/maintracks.css
+++ b/src/components/spotify/body/maintracks/maintracks.css
@@ -1,10 +1,14 @@
 .maintracks {
-    height: 200px;
-    width: 180px;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    border-radius: 2vh;
 }
 
 .maintracks-img {
@@ -14,6 +18,12 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.maintracks-img:after{
+    content: '';
+    display: block;
+    padding-bottom: 100%;
 }
 
 .maintracks-name {
