--- a/src/components/spotify/navbar/navbar.css
+++ b/src/components/spotify/navbar/navbar.css
@@ -30,6 +30,12 @@
     font-size: 12px;
 }
 
+@media screen and (max-width: 750px) {
+    .searchbar input {
+        width: 150px;
+    }
+}
+
 .searchbar input::placeholder {
     font-size: 12px;
     color: rgb(165,176,195);
@@ -42,6 +48,13 @@
     align-items: center;
     justify-content: center;
     margin-right: 100px;
+}
+
+
+@media screen and (max-width: 1100px) {
+    .navbar .avatar {
+        margin-right: 30px;
+    }
 }
 
 .navbar .avatar a {
@@ -60,4 +73,11 @@
     color: rgb(165,176,195);
     font-size: 14px;
     font-weight: 600;
+}
+
+
+@media screen and (max-width: 750px) {
+    .avatar span {
+        display: none;
+    }
 }
