--- a/src/components/spotify/sidebar/sidebar.css
+++ b/src/components/spotify/sidebar/sidebar.css
@@ -7,6 +7,12 @@
     flex-flow: column;
 }
 
+@media screen and (max-width: 750px) {
+    .sidebar {
+        display: none;
+    }
+}
+
 .sidebar-logo {
     width: 100%;
     height: 120px;
