--- a/src/components/spotify/body/mainplayed/mainplayed.css
+++ b/src/components/spotify/body/mainplayed/mainplayed.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 1100px) {
     .mainplayed {
-        height: 52px;
+        height: auto;
         margin: 1%;
         width: 31.3%;
         float: left;
@@ -20,8 +20,9 @@
 
 @media screen and (max-width: 750px) {
     .mainplayed {
-        margin: 1%;
-        width: 14.66%;
+        width: 100%;
+        margin: 0;
+        margin-bottom: 1%;
     }
 }
 
@@ -48,7 +49,7 @@
 
 @media screen and (max-width: 750px) {
     .mainplayed-img {
-        width: 100;
+        display: none;
     }
 }
 
@@ -74,7 +75,9 @@
 
 @media screen and (max-width: 750px) {
     .mainplayed-name {
-        display: none;
+        width: 100%;
+        display: flex;
+        gap: 1%;
     }
 }
 
