--- a/src/components/spotify/footer/currenttrack/currenttrack.css
+++ b/src/components/spotify/footer/currenttrack/currenttrack.css
@@ -12,6 +12,10 @@
         width: 100%;
         justify-content: center;
         transform: translateY(-70px);
+        background-image: linear-gradient(rgba(0,0,0,0), rgba(1,1,1,1));
+        box-sizing: initial;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 }
 
